MockInterviewPackage/main/default/objects/Mock_Interview_Self__c/Mock_Interview_Self__c.object-meta.xml
<CustomObject>
    <label>Mock Interview Self</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mock_Interview_Selfs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>