MockInterviewPackage/main/default/objects/Mock_Interview_Self__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Mock_Interview_Selfs</relationshipLabel>
    <relationshipName>Mock_Interview_Selfs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>