MockInterviewPackage/main/default/objects/Mock_Interview_Self__c/fields/MI_Question_Pool__c.field-meta.xml
<CustomField>
    <fullName>MI_Question_Pool__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>MI Question Pool</label>
    <referenceTo>MI_Question_Pool__c</referenceTo>
    <relationshipLabel>Mock_Interview_Selfs</relationshipLabel>
    <relationshipName>Mock_Interview_Selfs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>