MockInterviewPackage/main/default/objects/Mock_Interview_Self__c/fields/MI_Question_Pool_Soft_Skill__c.field-meta.xml
<CustomField>
    <fullName>MI_Question_Pool_Soft_Skill__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MI Question Pool Soft Skill</label>
    <referenceTo>MI_Question_Pool__c</referenceTo>
    <relationshipLabel>Mock Interview Selves</relationshipLabel>
    <relationshipName>Mock_Interview_Selves</relationshipName>
    <type>Lookup</type>
</CustomField>