MockInterviewPackage/main/default/objects/Mock_Interview_Self__c/fields/MI_Question_Pool_Tech_Skill__c.field-meta.xml
<CustomField>
    <fullName>MI_Question_Pool_Tech_Skill__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MI Question Pool Tech Skill</label>
    <referenceTo>MI_Question_Pool__c</referenceTo>
    <relationshipLabel>Mock Interview Selves (MI Question Pool Tech Skill)</relationshipLabel>
    <relationshipName>Mock_Interview_Selves1</relationshipName>
    <type>Lookup</type>
</CustomField>