MockInterviewPackage/main/default/objects/Mock_Interview_Self__c/fields/Public__c.field-meta.xml
<CustomField>
    <fullName>Public__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Do you want to public this?</inlineHelpText>
    <label>Public</label>
    <type>Checkbox</type>
</CustomField>